addGlobalUpdate