@@ -3,12 +3,15 @@ package edu.itstep.final_project_v1.domain.services;
 import edu.itstep.final_project_v1.domain.models.Post;
 import edu.itstep.final_project_v1.domain.repositories.PostRepository;
 import edu.itstep.final_project_v1.domain.repositories.RatingRepository;
-import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
+import lombok.RequiredArgsConstructor;
 
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,8 +19,6 @@ public class PostService {
 
     private final PostRepository postRepository;
     private final RatingRepository ratingRepository;
-
-    private double averageRating;
 
     public Optional<Post> getById(Long id) {
         return postRepository.findById(id);
@@ -28,12 +29,12 @@ public class PostService {
     }
 
     public List<Post> getAll() {
-        List<Post> posts = postRepository.findAll();
-        for (Post post : posts) {
-            double averageRating = ratingRepository.findAverageRatingByPostId(post.getId());
-            post.setAverageRating(averageRating);
-        }
-        return posts;
+        return postRepository.findAll().stream()
+                .peek(post -> {
+                    double averageRating = ratingRepository.findAverageRatingByPostId(post.getId());
+                    post.setAverageRating(averageRating);
+                })
+                .toList();
     }
 
     public void save(Post post) {
@@ -49,7 +50,8 @@ public class PostService {
     }
 
     public List<Post> getTopRatedPosts(int limit) {
-        List<Post> posts = postRepository.findAll();
+        Pageable pageable = PageRequest.of(0, limit);
+        List<Post> posts = postRepository.findPostsWithAtLeastTwoLikes(pageable);
 
         posts.forEach(post -> {
             double averageRating = ratingRepository.findAverageRatingByPostId(post.getId());
@@ -57,20 +59,16 @@ public class PostService {
         });
 
         return posts.stream()
-                .filter(post -> post.getAverageRating() == 5.0)
                 .sorted((p1, p2) -> Double.compare(p2.getAverageRating(), p1.getAverageRating()))
-                .limit(limit)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public List<Post> getPostsByBlog(Long categoryId) {
-        List<Post> posts = postRepository.findByCategoryId(categoryId);
-
-        posts.forEach(post -> {
-            double averageRating = ratingRepository.findAverageRatingByPostId(post.getId());
-            post.setAverageRating(averageRating);
-        });
-
-        return posts;
+        return postRepository.findByCategoryId(categoryId).stream()
+                .peek(post -> {
+                    double averageRating = ratingRepository.findAverageRatingByPostId(post.getId());
+                    post.setAverageRating(averageRating);
+                })
+                .toList();
     }
 }
